--- a/Site/Web-data-viz/public/css/sobre.css
+++ b/Site/Web-data-viz/public/css/sobre.css
@@ -124,3 +124,24 @@ flex-direction: row;
  margin-left: 1rem;
 }
 
+
+.home-fundo2{
+    width: 100%;
+    height: 40rem; 
+    gap: 0.9rem;
+    flex-direction: row;
+}
+
+.texto-lifestyle{
+    width: 45%;
+    height: 35rem; 
+    border: 2px solid honeydew;
+    margin: 2rem;
+}
+
+.img-lifestyle{
+    background-image: url(../../../Assets/Imagens/PHOS\ imagem.png);
+    width: 45%;
+    height: 35rem; 
+    margin: 2rem;
+}
