--- a/Site/Web-data-viz/public/css/home.css
+++ b/Site/Web-data-viz/public/css/home.css
@@ -9,7 +9,6 @@
     width: 100%;
     height: 40rem;
 }
-
 .home1-info{
     display: flex;
     flex-direction: column;
@@ -51,6 +50,7 @@
 .home2-titulo{
     font-size: 3.5rem;
     color: #e0a246;
+    margin-top: 1.8rem;
 }
 
 .section_home-cards{
