--- a/Site/Web-data-viz/public/css/lifestyle.css
+++ b/Site/Web-data-viz/public/css/lifestyle.css
@@ -158,5 +158,39 @@ flex-direction: row;
     background-color: antiquewhite;
     margin: 2rem;
     border: 2px solid sienna;
+}
+
+.life-fundo1{
+    width: 100%;
+    height: 50rem;
+    display: flex;
+    border: 2px solid red;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+
+.life-info{
+    width: 75%;
+    font-size: 2.4rem;
+    margin: 2.4rem;
+    border: 2px solid honeydew;
+    text-align: justify;
+    
+}
+
+#life-button{
+height: 4rem;
+width: 7rem;
+background-color: rebeccapurple;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.life-box1{
 
 }
