--- a/Site/Web-data-viz/public/css/sobre.css
+++ b/Site/Web-data-viz/public/css/sobre.css
@@ -158,5 +158,5 @@ flex-direction: row;
     background-color: antiquewhite;
     margin: 2rem;
     border: 2px solid sienna;
-
+    background-image: url(../assets/imagem/equipe4.png);
 }
