--- a/Site/Web-data-viz/public/css/home.css
+++ b/Site/Web-data-viz/public/css/home.css
@@ -69,7 +69,34 @@ flex-direction: row;
     width: 30%;
     height: auto;
     margin: 1rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
+
+.home-card img{
+    width: 80%;
+    height: 60%;
+    border: 2px solid royalblue;
+    margin-top: 2rem;
+}
+
+.home-card p{
+margin: 1.5rem;
+margin-top: 12px;
+color: black;
+display: flex;
+text-align: justify;
+font-size: 1.5rem;
+}
+
+.home-card h3{
+color: black;
+font-size: 1.8rem;
+margin-top: 8px;
+
+}
+
 .home-text-card{
     display: flex;
     justify-content: center;
@@ -115,6 +142,12 @@ flex-direction: row;
  height:100%;
  border: 2px solid #e0a246;
  /* background-color: #e0a246; */
+}
+
+.home3-carrosel-imagem img{
+ width: 100%;
+ height:100%;
+
 }
 
 .home3-carrosel-passar{
