--- a/Site/Web-data-viz/public/css/home.css
+++ b/Site/Web-data-viz/public/css/home.css
@@ -59,8 +59,10 @@ margin-top: 20px;
 width: 100%;
 height: 550px;
 display: flex;
-justify-content: space-between;
+justify-content:space-between;
 flex-direction: row;
+margin-left: 4rem;
+margin-right: 4rem;
 
 }
 
@@ -80,6 +82,11 @@ flex-direction: row;
     border: 2px solid royalblue;
     margin-top: 2rem;
 }
+
+.img1 {
+    background-image: url(../assets/imagem/f-cruz.png);
+}
+
 
 .home-card p{
 margin: 1.5rem;
@@ -157,3 +164,26 @@ margin-top: 8px;
  margin-left: 1rem;
 }
 
+.img1{
+    width: 80%;
+    height: 60%;
+    border: 2px solid royalblue;
+    margin-top: 2rem;
+    background-image: url(../assets/imagem/fmt-cruz.png);
+}
+
+.img2{
+    width: 80%;
+    height: 60%;
+    border: 2px solid royalblue;
+    margin-top: 2rem;
+    background-image: url(../assets/imagem/fmt-ouvir.png);
+}
+
+.img3{
+    width: 80%;
+    height: 60%;
+    border: 2px solid royalblue;
+    margin-top: 2rem;
+    background-image: url(../assets/imagem/fmt-ajudar.png);
+}
