--- a/Site/Web-data-viz/public/dash.css
+++ b/Site/Web-data-viz/public/dash.css
@@ -1,5 +1,6 @@
 *{
-    background-color: rgb(231, 222, 143);
+    background-color: #251A0D;
+    color: white;
 }
 
 .dash-topo{
@@ -7,7 +8,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    border: coral solid 2px;
+    /* border: coral solid 2px; */
     height: 6rem;
 }
 
@@ -17,7 +18,7 @@
     align-items: center;
     justify-content: center;
     margin-right: 52rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
 }
 
 .dashboard-topo{
@@ -27,10 +28,10 @@
     border: coral solid 2px;
 }
 
-.button_monitoramento{
-    width: 10rem;
-    height: 5rem;
-    background-color: bisque;
+#button_monitoramento{
+    width: 7.5rem;
+    height: 2.7rem;
+    font-size: 0.8rem;
 }
 
 .dash-usuario{
@@ -65,7 +66,7 @@
 .linha-indicadores{
    height: 7rem;
    width: 100%;
-   border: 2px solid crimson;
+   /* border: 2px solid crimson; */
    display: flex;
    flex-direction: row;
    justify-content: space-between;
@@ -79,7 +80,7 @@
 .boxiindicadores{
     height: auto;
     width: 18rem;
-    border: 2px solid cornflowerblue;
+    border: coral solid 2px;
 }
 
 .box-do-principal{
@@ -95,7 +96,7 @@
 .grafico-principal{
     width: 90%;
     height: 27rem;
-    border: 2px solid seagreen;
+    /* border: 2px solid seagreen; */
     margin-top: 3rem;
 
     display: flex;
@@ -112,7 +113,7 @@
 .box-grafico{
     width: 80%;
     height: 90%;
-    border: 2px solid rgb(3, 54, 64);
+    /* border: 2px solid rgb(3, 54, 64); */
     margin-bottom: 3.25rem;
     display: flex;
     justify-self: center;
