--- a/Site/Web-data-viz/public/css/lifestyle.css
+++ b/Site/Web-data-viz/public/css/lifestyle.css
@@ -1,25 +1,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat'
+    font-family: 'Montserrat';
 }
 
-.home-fundo1 {
-    /* background-image: url(../../../Assets/Imagens/PHOS\ imagem.png); */
-    width: 100%;
-    height: 40rem;
-}
-
-.home1-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 43%;
-    margin-left: 5rem;
-    align-items: center;
-}
 
 .home-texto {
     font-size: 5.4rem;
@@ -27,105 +11,13 @@
     cursor: none;
 }
 
-#home-button {
-    background-color: #251A0D;
-    color: white;
-    height: 4rem;
-    width: 14rem;
-    margin-top: 2rem;
-    border: 2px solid black;
-    border-radius: 8px;
-    box-shadow: black 2px 2px 2px;
-}
 
-.home-fundo2 {
-    /* background-color: rgb(155, 218, 141); */
-    width: 100%;
-    height: 42rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: 2px solid white;
-}
 
-.home2-titulo {
-    font-size: 3.5rem;
-    color: #e0a246;
-}
 
-.section_home-cards {
-    /* background-color: rgb(127, 146, 255); */
-    margin-top: 20px;
-    width: 100%;
-    height: 550px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-
-}
-
-.home-card {
-    background-color: antiquewhite;
-    width: 30%;
-    height: auto;
-    margin: 1rem;
-}
-
-.home-text-card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(226, 217, 234);
-}
-
-.home-fundo3 {
-    /* background-color: rgb(218, 204, 141); */
-    width: 100%;
-    height: 46rem;
-    display: flex;
-    flex-direction: column;
-}
-
-.home3-titulo {
-    font-size: 3.5rem;
-    color: #e0a246;
-    display: flex;
-    justify-content: center;
-}
-
-.home3-carrosel {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin-top: 20px;
-    /* background-color: rgb(205, 249, 223); */
-}
-
-.home3-carrosel-voltar {
-    border: 3px solid coral;
-    width: 4rem;
-    height: 4rem;
-    margin-right: 1rem;
-}
-
-.home3-carrosel-imagem {
-    width: 85%;
+.life-box1{
     height: 100%;
-    border: 2px solid #e0a246;
-    /* background-color: #e0a246; */
+    background-color: #D9C9AE;
 }
-
-.home3-carrosel-passar {
-    border: 3px solid coral;
-    width: 4rem;
-    height: 4rem;
-    margin-left: 1rem;
-}
-
-
 
 .img-lifestyle {
     height: 75%;
@@ -142,17 +34,30 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-image: url(../assets/imagem/evanlismo.jpg);
+    background-image: url(../assets/imagem/lifestyle.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
 
 .life-info {
-    width: 75%;
-    font-size: 2.4rem;
-    margin: 2.4rem;
+    background-color: #D9C9AE;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
     /* border: 2px solid honeydew; */
     text-align: justify;
+}
+
+
+.life-info h2{
+    font-size: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+    margin-top: 3rem;
+    color: #251A0D;
 }
 
 #life-button {
@@ -164,7 +69,6 @@
     justify-content: center;
     background-color: #251A0D;
     border: 2px solid white;
-    margin-top: 3rem;
     font-weight: bold;
     font-size: 18px;
 
