--- a/Site/Web-data-viz/public/css/lifestyle.css
+++ b/Site/Web-data-viz/public/css/lifestyle.css
@@ -35,6 +35,7 @@
     justify-content: center;
     flex-direction: column;
     background-image: url(../assets/imagem/lifestyle.png);
+    border:2px solid #251A0D;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -51,7 +52,7 @@
 
 
 .life-info h2{
-    font-size: 3rem;
+    font-size: 2.7rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,7 +87,8 @@
 
 .life-fundo2{
     width: 100%;
-    height: 20rem;
+    height: 3rem;
+    background-color: #D9C9AE;
     display: flex;
     align-items: center;
     justify-content: center;
