--- a/Site/Web-data-viz/public/css/cadastro.css
+++ b/Site/Web-data-viz/public/css/cadastro.css
@@ -2,10 +2,9 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 90vh;
-    background-color: #362a23;
+    height: 100%;
+  background-color: #2b1a10;
 }
-
 .cadastro{
 margin-top: 2rem;
 background-color:#2b1a10;
@@ -15,6 +14,7 @@ box-sizing: 0 0 10px #000;
 width: 25rem;
   box-shadow: 0 0 15px rgba(224, 162, 70, 0.3);
   border: 1px solid #555;
+  margin-bottom: 2rem;
 }
 
 .form-cadastro{
@@ -22,6 +22,7 @@ width: 25rem;
  flex-direction: column; 
  align-items: center;
  justify-content: center;  
+
 }
 
 .cadastro-titulo{
@@ -29,6 +30,8 @@ width: 25rem;
     color: #e0a246;
     margin-bottom: 30px;
 }
+
+
 
 label{
   display: block;
@@ -72,4 +75,24 @@ button{
 .login-link a{
     color: #e0a246;
     text-decoration: none;
+}
+
+#botao{
+  width: 100%;
+  background-color: #e0a246;
+  color: #1c120a;
+  font-weight: bold;
+  border: none;
+  padding: 12px;
+  border-radius: 5px;
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#botao:hover {
+  background-color: #ffc16b;
 }
